--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
@@ -23,6 +22,30 @@
 </head>
 
 <body>
+
+
+    <header class="w-11/12 mx-auto flex flex-col md:flex-row items-center gap-y-10  md:justify-between md:items-center py-7">
+        <div class="left flex flex-col md:flex-row gap-5 items-center">
+            <img class="w-15" src="./assets/logo.png" alt="Bangladesh govt logo">
+            <h2 class="font-bold text-[#006747] text-xl roboto">Emergency<br class="hidden md:inline">Service</h2>
+        </div>
+
+        <div class="right grid grid-cols-3 gap-10 md:gap-12 roboto">
+            <div class="flex flex-col-reverse items-center md:flex-row gap-3 p-3 md:py-4 md:px-9 bg-[rgba(65,255,107,0.1)] md:rounded-full rounded-2xl">
+                <span class="font-bold">0</span>
+                <img class="max-w-6" src="./assets/heart.png" alt="Heart">
+            </div>
+            <div class="flex flex-col-reverse items-center md:flex-row gap-3 p-3 md:py-4 md:px-9 bg-[rgba(65,255,107,0.1)] md:rounded-full rounded-2xl">
+                <span class="font-bold">0</span>
+                <img class="max-w-6" src="./assets/coin.png" alt="Coin">
+            </div>
+            <div class="flex flex-col-reverse items-center md:flex-row gap-3 p-3 md:py-4 md:px-9 bg-[#00A63E] text-white md:rounded-full font-bold rounded-2xl">
+                <h3>0</h3> Copy
+            </div>
+        </div>
+    </header>
+
+
 
 </body>
 
