--- a/index.html
+++ b/index.html
@@ -24,25 +24,31 @@
 <body>
 
 
-    <header class="w-11/12 mx-auto flex flex-col md:flex-row items-center gap-y-10  md:justify-between md:items-center py-7">
-        <div class="left flex flex-col md:flex-row gap-5 items-center">
-            <img class="w-15" src="./assets/logo.png" alt="Bangladesh govt logo">
-            <h2 class="font-bold text-[#006747] text-xl roboto">Emergency<br class="hidden md:inline">Service</h2>
-        </div>
+    <header>
+        <nav
+            class="w-11/12 mx-auto flex flex-col md:flex-row items-center gap-y-10  md:justify-between md:items-center py-7">
+            <div class="left flex flex-col md:flex-row gap-5 items-center">
+                <img class="w-15" src="./assets/logo.png" alt="Bangladesh govt logo">
+                <h2 class="font-bold text-[#006747] text-xl roboto">Emergency<br class="hidden md:inline">Service</h2>
+            </div>
 
-        <div class="right grid grid-cols-3 gap-10 md:gap-12 roboto">
-            <div class="flex flex-col-reverse items-center md:flex-row gap-3 p-3 md:py-4 md:px-9 bg-[rgba(65,255,107,0.1)] md:rounded-full rounded-2xl">
-                <span class="font-bold">0</span>
-                <img class="max-w-6" src="./assets/heart.png" alt="Heart">
+            <div class="right grid grid-cols-3 gap-10 md:gap-12 roboto">
+                <div
+                    class="flex flex-col-reverse items-center md:flex-row gap-3 p-3 md:py-4 md:px-9 bg-[rgba(65,255,107,0.1)] md:rounded-full rounded-2xl">
+                    <span class="font-bold">0</span>
+                    <img class="max-w-6" src="./assets/heart.png" alt="Heart">
+                </div>
+                <div
+                    class="flex flex-col-reverse items-center md:flex-row gap-3 p-3 md:py-4 md:px-9 bg-[rgba(65,255,107,0.1)] md:rounded-full rounded-2xl">
+                    <span class="font-bold">0</span>
+                    <img class="max-w-6" src="./assets/coin.png" alt="Coin">
+                </div>
+                <div
+                    class="flex flex-col-reverse items-center md:flex-row gap-3 p-3 md:py-4 md:px-9 bg-[#00A63E] text-white md:rounded-full font-bold rounded-2xl">
+                    <h3>0</h3> Copy
+                </div>
             </div>
-            <div class="flex flex-col-reverse items-center md:flex-row gap-3 p-3 md:py-4 md:px-9 bg-[rgba(65,255,107,0.1)] md:rounded-full rounded-2xl">
-                <span class="font-bold">0</span>
-                <img class="max-w-6" src="./assets/coin.png" alt="Coin">
-            </div>
-            <div class="flex flex-col-reverse items-center md:flex-row gap-3 p-3 md:py-4 md:px-9 bg-[#00A63E] text-white md:rounded-full font-bold rounded-2xl">
-                <h3>0</h3> Copy
-            </div>
-        </div>
+        </nav>
     </header>
 
 
