--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body>
+<body class="roboto">
 
 
     <header>
@@ -49,8 +49,15 @@
                 </div>
             </div>
         </nav>
+
     </header>
 
+
+    <section class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] py-12 text-white text-center">
+        <img class="max-w-32 mx-auto" src="./assets/logo-dark.png" alt="Bangladesh govt logo">
+        <h1 class="my-5 font-bold text-4xl">Emergency Service Directory</h1>
+        <p>Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+    </section>
 
 
 </body>
