phone number section created

--- a/index.html
+++ b/index.html
@@ -53,11 +53,235 @@
     </header>
 
 
-    <section class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] py-12 text-white text-center">
+    <section class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] py-12 px-4 text-white text-center">
         <img class="max-w-32 mx-auto" src="./assets/logo-dark.png" alt="Bangladesh govt logo">
         <h1 class="my-5 font-bold text-4xl">Emergency Service Directory</h1>
-        <p>Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+        <p>Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of
+            Bangladesh</p>
     </section>
+
+
+
+
+    <section class="bg-green-50 pt-10">
+
+        <div class="grid grid-cols-12 w-11/12 mx-auto gap-x-0 gap-y-8 md:gap-8">
+            <section class="lg:col-span-9 col-span-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <div class="p-5 bg-white shadow-xl rounded-xl">
+                    <div class="flex justify-between items-center">
+                        <div class=" bg-red-200 p-4 rounded-2xl">
+                            <img class="max-w-[40px]" src="./assets/emergency.png" alt="Emergency">
+                        </div>
+                        <i class="fa-regular fa-heart text-2xl"></i>
+                    </div>
+                    <div class="my-6">
+                        <h3 class="font-bold text-xl">National Emergency Number</h3>
+                        <p class="text-sm text-gray-500">National Emergency</p>
+                    </div>
+                    <div class="mb-6">
+                        <h2 class="text-2xl font-extrabold">999</h2>
+                        <button class="btn btn-soft rounded-full text-gray-500 font-light">All</button>
+                    </div>
+                    <div class="grid grid-cols-2 gap-3">
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                                class="fa-solid fa-copy"></i>Copy</button>
+                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal"><i
+                                class="fa-solid fa-phone"></i>Call</button>
+                    </div>
+                </div>
+                <div class="p-5 bg-white shadow-xl rounded-xl">
+                    <div class="flex justify-between items-center">
+                        <div class=" bg-blue-200 p-4 rounded-2xl">
+                            <img class="max-w-[40px]" src="./assets/police.png" alt="Police">
+                        </div>
+                        <i class="fa-regular fa-heart text-2xl"></i>
+                    </div>
+                    <div class="my-6">
+                        <h3 class="font-bold text-xl">Police Helpline Number</h3>
+                        <p class="text-sm text-gray-500">Police</p>
+                    </div>
+                    <div class="mb-6">
+                        <h2 class="text-2xl font-extrabold">999</h2>
+                        <button class="btn btn-soft rounded-full text-gray-500 font-light">Police</button>
+                    </div>
+                    <div class="grid grid-cols-2 gap-3">
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                                class="fa-solid fa-copy"></i>Copy</button>
+                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal"><i
+                                class="fa-solid fa-phone"></i>Call</button>
+                    </div>
+                </div>
+                <div class="p-5 bg-white shadow-xl rounded-xl">
+                    <div class="flex justify-between items-center">
+                        <div class=" bg-red-200 p-4 rounded-2xl">
+                            <img class="max-w-[40px]" src="./assets/fire-service.png" alt="Emergency">
+                        </div>
+                        <i class="fa-regular fa-heart text-2xl"></i>
+                    </div>
+                    <div class="my-6">
+                        <h3 class="font-bold text-xl">Fire Service Number</h3>
+                        <p class="text-sm text-gray-500">Fire Service</p>
+                    </div>
+                    <div class="mb-6">
+                        <h2 class="text-2xl font-extrabold">999</h2>
+                        <button class="btn btn-soft rounded-full text-gray-500 font-light">Fire</button>
+                    </div>
+                    <div class="grid grid-cols-2 gap-3">
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                                class="fa-solid fa-copy"></i>Copy</button>
+                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal"><i
+                                class="fa-solid fa-phone"></i>Call</button>
+                    </div>
+                </div>
+                <div class="p-5 bg-white shadow-xl rounded-xl">
+                    <div class="flex justify-between items-center">
+                        <div class=" bg-red-200 p-4 rounded-2xl">
+                            <img class="max-w-[40px]" src="./assets/ambulance.png" alt="Emergency">
+                        </div>
+                        <i class="fa-regular fa-heart text-2xl"></i>
+                    </div>
+                    <div class="my-6">
+                        <h3 class="font-bold text-xl">Ambulance Service</h3>
+                        <p class="text-sm text-gray-500">Ambulance</p>
+                    </div>
+                    <div class="mb-6">
+                        <h2 class="text-2xl font-extrabold">1994-999999</h2>
+                        <button class="btn btn-soft rounded-full text-gray-500 font-light">Health</button>
+                    </div>
+                    <div class="grid grid-cols-2 gap-3">
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                                class="fa-solid fa-copy"></i>Copy</button>
+                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal"><i
+                                class="fa-solid fa-phone"></i>Call</button>
+                    </div>
+                </div>
+                <div class="p-5 bg-white shadow-xl rounded-xl">
+                    <div class="flex justify-between items-center">
+                        <div class=" bg-red-200 p-4 rounded-2xl">
+                            <img class="max-w-[40px]" src="./assets/emergency.png" alt="Emergency">
+                        </div>
+                        <i class="fa-regular fa-heart text-2xl"></i>
+                    </div>
+                    <div class="my-6">
+                        <h3 class="font-bold text-xl">Women & Child Helpline</h3>
+                        <p class="text-sm text-gray-500">Women & Child Helpline</p>
+                    </div>
+                    <div class="mb-6">
+                        <h2 class="text-2xl font-extrabold">109</h2>
+                        <button class="btn btn-soft rounded-full text-gray-500 font-light">Help</button>
+                    </div>
+                    <div class="grid grid-cols-2 gap-3">
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                                class="fa-solid fa-copy"></i>Copy</button>
+                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal"><i
+                                class="fa-solid fa-phone"></i>Call</button>
+                    </div>
+                </div>
+                <div class="p-5 bg-white shadow-xl rounded-xl">
+                    <div class="flex justify-between items-center">
+                        <div class=" bg-red-200 p-4 rounded-2xl">
+                            <img class="max-w-[40px]" src="./assets/emergency.png" alt="Emergency">
+                        </div>
+                        <i class="fa-regular fa-heart text-2xl"></i>
+                    </div>
+                    <div class="my-6">
+                        <h3 class="font-bold text-xl">Anti-Corruption Helpline</h3>
+                        <p class="text-sm text-gray-500">Anti-Corruption</p>
+                    </div>
+                    <div class="mb-6">
+                        <h2 class="text-2xl font-extrabold">106</h2>
+                        <button class="btn btn-soft rounded-full text-gray-500 font-light">Govt.</button>
+                    </div>
+                    <div class="grid grid-cols-2 gap-3">
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                                class="fa-solid fa-copy"></i>Copy</button>
+                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal"><i
+                                class="fa-solid fa-phone"></i>Call</button>
+                    </div>
+                </div>
+                <div class="p-5 bg-white shadow-xl rounded-xl">
+                    <div class="flex justify-between items-center">
+                        <div class=" bg-red-200 p-4 rounded-2xl">
+                            <img class="max-w-[40px]" src="./assets/emergency.png" alt="Emergency">
+                        </div>
+                        <i class="fa-regular fa-heart text-2xl"></i>
+                    </div>
+                    <div class="my-6">
+                        <h3 class="font-bold text-xl">Electricity Helpline</h3>
+                        <p class="text-sm text-gray-500">Electricity Outage</p>
+                    </div>
+                    <div class="mb-6">
+                        <h2 class="text-2xl font-extrabold">16216</h2>
+                        <button class="btn btn-soft rounded-full text-gray-500 font-light">Electricity</button>
+                    </div>
+                    <div class="grid grid-cols-2 gap-3">
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                                class="fa-solid fa-copy"></i>Copy</button>
+                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal"><i
+                                class="fa-solid fa-phone"></i>Call</button>
+                    </div>
+                </div>
+                <div class="p-5 bg-white shadow-xl rounded-xl">
+                    <div class="flex justify-between items-center">
+                        <div class=" bg-red-200 p-4 rounded-2xl">
+                            <img class="max-w-[40px]" src="./assets/brac.png" alt="Emergency">
+                        </div>
+                        <i class="fa-regular fa-heart text-2xl"></i>
+                    </div>
+                    <div class="my-6">
+                        <h3 class="font-bold text-xl">Brac Helpline</h3>
+                        <p class="text-sm text-gray-500">Brac</p>
+                    </div>
+                    <div class="mb-6">
+                        <h2 class="text-2xl font-extrabold">16445</h2>
+                        <button class="btn btn-soft rounded-full text-gray-500 font-light">NGO</button>
+                    </div>
+                    <div class="grid grid-cols-2 gap-3">
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                                class="fa-solid fa-copy"></i>Copy</button>
+                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal"><i
+                                class="fa-solid fa-phone"></i>Call</button>
+                    </div>
+                </div>
+                <div class="p-5 bg-white shadow-xl rounded-xl">
+                    <div class="flex justify-between items-center">
+                        <div class=" bg-red-200 p-4 rounded-2xl">
+                            <img class="max-w-[40px]" src="./assets/Bangladesh-Railway.png" alt="Emergency">
+                        </div>
+                        <i class="fa-regular fa-heart text-2xl"></i>
+                    </div>
+                    <div class="my-6">
+                        <h3 class="font-bold text-xl">Bangladesh Railway Helpline </h3>
+                        <p class="text-sm text-gray-500">Bangladesh Railway</p>
+                    </div>
+                    <div class="mb-6">
+                        <h2 class="text-2xl font-extrabold">163</h2>
+                        <button class="btn btn-soft rounded-full text-gray-500 font-light">Travel</button>
+                    </div>
+                    <div class="grid grid-cols-2 gap-3">
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                                class="fa-solid fa-copy"></i>Copy</button>
+                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal"><i
+                                class="fa-solid fa-phone"></i>Call</button>
+                    </div>
+                </div>
+            </section>
+            <aside class="lg:col-span-3 col-span-12">
+                <div class="flex justify-between p-5 items-center">
+                    <div>
+                        <i class="fa-regular fa-clock text-gray-500"></i>
+                        <span class="font-semibold">Call History</span>
+                    </div>
+                    <button
+                        class="btn btn-active btn-success border-none bg-green-600 text-white font-normal px-7 py-4 rounded-full">Clear</button>
+                </div>
+            </aside>
+        </div>
+
+    </section>
+
+
+
 
 
 </body>
